# esibd_bs

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  test_chiller_logging.py  watchdog_on_roids_.py
debugging/: README.md
debugging/config/: device_config.py
debugging/logs/: .gitkeep
debugging/notebooks/: 003_chiller_debug_02.ipynb  004_pfeiffer_debug_01.ipynb  005_pump_locker_Test.ipynb  006_syringepump_debug.ipynb  007_Vac_Transfer_Depo_Chamber_Test.ipynb  008_single_pressure_monitor.ipynb  009_A100200_Watercooling_Test.html.html  009_A100200_Watercooling_Test.ipynb  010_esibd_vac_test.ipynb  011_cgc_psu_debug.ipynb  012_cgc_psu_withbase_debug.ipynb  013_tpg366_pressure_test.ipynb  014_arduino_test.ipynb  015_cgc_psu_test.ipynb  016_Temp_check_CGC_Chiller.ipynb  017_Testing_pA.ipynb  018_Testing_AMPR.ipynb  019_Testing_AMPR.ipynb  020_tpg366_pressure_monitor.ipynb  021_tpg366_tcp_pressure_monitor.ipynb  022_esibd_pumps_only.ipynb  023_cgc_config_monitor.ipynb  024_cgc_esi_test.ipynb  12-08-2025_1021_pump_locker_data.csv  12-08-2025_1021_pump_locker_data.pkl  Vac_Transfer_Depo_Chamber_Test.ipynb  arduino_debug.ipynb  arduino_debug_01.ipynb  chiller_debug_02.ipynb  chiller_debug_test.ipynb  dual_pump_control.ipynb  esibd_pressure_chain_20251013_141535.csv  pfeiffer_debug_01.ipynb  pump_locker_Test.ipynb  syringepump_debug.ipynb
docs/: threading_guide.md
examples/: chiller_threading_examples.py  simple_chiller_usage.py
src/: __init__.py
src/archieve/: singlestep.py
src/devices/: __init__.py
tests/: README.md  test_devices.py
tests/arduino/: test_arduino.py
tests/chiller/: README.md  test_chiller.py
tests/reports/: arduino_test_report.html  arduino_test_results.txt  chiller_test_report.html  syringe_pump_test_report.html  test_report.html  test_results.xml
tests/syringe_pump/: README.md  test_syringe_pump.py
(+82 files in other folders)
